<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="#3f494b"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/GridLayout"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/borde_boton"
        android:fontFamily="@font/digital"
        android:textColor="@color/white"
        android:textSize="60dp" />

    <GridLayout

        android:id="@+id/GridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5">

        <Button
            android:id="@+id/limpiar_pantalla"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/limpiar_pantalla" />

        <Button
            android:id="@+id/dividir"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/dividir" />

        <Button
            android:id="@+id/multiplicar"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/multiplicar" />

        <Button
            android:id="@+id/borrar_ultimo"
            android:layout_margin="1dp"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/borde_boton"
            android:text="@string/borrar_ultimo" />

        <Button
            android:id="@+id/siete"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/siete" />

        <Button
            android:id="@+id/ocho"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/ocho" />

        <Button
            android:id="@+id/nueve"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/nueve" />

        <Button
            android:id="@+id/restar"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/restar" />

        <Button
            android:id="@+id/cuatro"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/cuatro" />

        <Button
            android:id="@+id/cinco"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/cinco" />

        <Button
            android:id="@+id/seis"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/seis" />

        <Button
            android:id="@+id/sumar"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/mas" />

        <Button
            android:id="@+id/uno"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:gravity="center"
            android:text="@string/uno" />

        <Button
            android:id="@+id/dos"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/dos" />

        <Button
            android:id="@+id/tres"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/tres" />

        <Button
            android:id="@+id/igual"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/igual" />

        <Button
            android:id="@+id/cero"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/cero" />

        <Button
            android:id="@+id/coma"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="1dp"
            android:background="@drawable/borde_boton"
            android:text="@string/coma" />

    </GridLayout>
</RelativeLayout>